--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,7 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind C-l send-keys 'C-l'
 bind C-k send-keys 'C-k'
+bind C-\ send-keys 'C-\'
 
 # others
 bind c command-prompt -p "Name of new window: " "new-window -n '%%'"
