--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,8 @@ set -g allow-rename off
 set -g renumber-windows on
 setw -g pane-base-index 1
 
+set -g mouse on
+
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 bind | split-window -h -c "#{pane_current_path}"
