--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
+# Tmux Version: 2.9a
+
 set -g default-terminal "screen-256color"
-set -g default-command "reattach-to-user-namespace -l fish"
 
 set -g base-index 1
 set -g prefix C-a
