--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@
 
 set -g default-terminal "screen-256color"
 
+set -g history-limit 5000
 set -g base-index 1
 set -g prefix C-a
 set -g allow-rename off
