--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,9 +24,6 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-bind -r C-l swap-window -t +1
-bind -r C-h swap-window -t -1
-
 # THEME
 set-option -g status-justify centre
 set -g status-left-length 60
@@ -39,9 +36,8 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-bind C-l send-keys 'C-l'
-bind C-k send-keys 'C-k'
-bind C-\ send-keys 'C-\'
+unbind-key -T copy-mode-vi C-h
+unbind-key -T copy-mode-vi C-j
 
 # others
 bind c command-prompt -p "Name of new window: " "new-window -n '%%'"
