--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,17 +14,12 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# THEME
+# theme
 set-option -g status-justify centre
 set -g status-left-length 60
 set -g status-right '%Y-%m-%d %H:%M'
@@ -38,6 +33,15 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 unbind-key -T copy-mode-vi C-h
 unbind-key -T copy-mode-vi C-j
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind C-l send-keys 'C-l' # prefix key reserve
+bind C-k send-keys 'C-k' # prefix key reserve
+
 
 # others
 bind c command-prompt -p "Name of new window: " "new-window -n '%%'"
